--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,25 +25,34 @@ jobs:
         java-version: '17'
         cache: 'gradle'
 
-    - name: Remove Gradle cache
-      run: |
-        rm -rf ~/.gradle/caches/
-        rm -rf ~/.gradle/daemon/
-        rm -rf ~/.gradle/native/
-
-    - name: Set up Android SDK
+    - name: Setup Android SDK
       uses: android-actions/setup-android@v3
+      with:
+        build-tools-version: "34.0.0"
+        ndk-version: "25.2.9519653"
+        cmake-version: "3.22.1"
 
     - name: Grant execute permission to Gradle
       run: chmod +x ./gradlew
 
-    - name: Clean project
-      run: ./gradlew clean
+    - name: Clean and regenerate Gradle config
+      run: |
+        rm -rf ~/.gradle/caches/
+        rm -rf ~/.gradle/wrapper/
+        rm -rf .gradle
+        ./gradlew --stop
+        
+    - name: Force Gradle plugin resolution
+      run: |
+        echo "systemProp.gradle.unsafe.configuration.on.demand=true" >> gradle.properties
+        echo "android.suppressUnsupportedCompileSdk=35" >> gradle.properties
+        echo "org.gradle.parallel=true" >> gradle.properties
 
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+    - name: Build with debug info
+      run: ./gradlew assembleDebug --stacktrace --scan --no-daemon
 
     - name: Upload APK artifact
+      if: success()
       uses: actions/upload-artifact@v4
       with:
         name: app-debug
