--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,24 @@
-# Project-wide Gradle settings.
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -Dkotlin.daemon.jvm.options="-Xmx2048m"
-
-# Android configuration
+# إعدادات أساسية
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.nonTransitiveRClass=true
-android.suppressUnsupportedCompileSdk=35
-android.kotlinVersion=1.9.22
-android.enableJetifier=false
 
-# Kotlin configuration
-kotlin.code.style=official
-kotlin.incremental=true
-kotlin.caching.enabled=true
+# إصدارات محددة
+systemProp.kotlinVersion=1.9.22
+systemProp.agpVersion=8.6.0
+systemProp.composeCompilerVersion=1.5.8
 
-# Build performance
+# تحسينات الأداء
 org.gradle.parallel=true
 org.gradle.caching=true
-org.gradle.daemon=true
 org.gradle.configureondemand=true
+kotlin.incremental=true
 
-# Compose compiler
+# حل المشكلات
+android.suppressUnsupportedCompileSdk=35
+android.enableJetifier=false
+googleServices.disableVersionCheck=true
+
+# إعدادات خاصة بـ Kotlin
+kotlin.code.style=official
 kotlin.compiler.execution.strategy=in-process
-
-# Firebase and Google Services
-firebasePerfPlugin=true
-googleServices.disableVersionCheck=false
-
-# Experimental features
-android.experimental.enableNewResourceShrinker=true
-android.enableBuildCache=true
