--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Clean Gradle cache
+        run: rm -rf ~/.gradle/caches/
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
@@ -32,7 +35,7 @@ jobs:
         with:
           name: debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
-  
+
   release:
     name: Build Release AAB
     runs-on: ubuntu-latest
