--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,3 +46,4 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version = "4.3.15" }
+dagger-hilt-android = { id = "com.google.dagger.hilt.android", version = "2.44" }
