--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,13 @@
-name: Android Build CI
+name: Android Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,63 +15,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout source code
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+        cache: 'gradle'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+    - name: Remove Gradle cache
+      run: |
+        rm -rf ~/.gradle/caches/
+        rm -rf ~/.gradle/daemon/
+        rm -rf ~/.gradle/native/
 
-      - name: Clean Gradle cache
-        run: rm -rf ~/.gradle/caches/
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
 
-      - name: 🔄 Refresh Dependencies
-        run: ./gradlew --refresh-dependencies
-        shell: bash
+    - name: Grant execute permission to Gradle
+      run: chmod +x ./gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug
-        shell: bash
+    - name: Clean project
+      run: ./gradlew clean
 
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: debug-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
 
-  release:
-    name: Build Release AAB
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: 🔄 Refresh Dependencies
-        run: ./gradlew --refresh-dependencies
-        shell: bash
-
-      - name: Build Release AAB
-        run: ./gradlew bundleRelease
-        shell: bash
-
-      - name: Upload Release AAB
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-aab
-          path: app/build/outputs/**/*.aab
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
