--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,36 +14,34 @@ ads = "22.6.0"
 materialIcons = "1.6.0"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx.core.ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx.lifecycle.runtime.ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx.activity.compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+
+androidx.compose.bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx.ui = { group = "androidx.compose.ui", name = "ui" }
+androidx.ui.graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx.ui.tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx.ui.tooling.preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx.ui.test.manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx.ui.test.junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx.material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx.material.icons.extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIcons" }
+
+firebase.bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase.auth.ktx = { group = "com.google.firebase", name = "firebase-auth-ktx" }
+firebase.database.ktx = { group = "com.google.firebase", name = "firebase-database-ktx" }
+
+play.services.ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "ads" }
+
+androidx.navigation.compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIcons" }
-
-# Firebase
-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
-firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx" }
-firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx" }
-
-# AdMob
-play-services-ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "ads" }
-
-# Navigation
-androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx.junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx.espresso.core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-google-services = { id = "com.google.gms.google-services", version = "4.4.0" }
-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version = "2.44" }
+android.application = { id = "com.android.application", version.ref = "agp" }
+jetbrains.kotlin.android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google.services = { id = "com.google.gms.google-services", version = "4.4.0" }
+dagger.hilt.android = { id = "com.google.dagger.hilt.android", version = "2.44" }
